--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,13 +8,13 @@
   "engineStrict": true,
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "start:build": "PORT=3000 ./node_modules/.bin/serve -s build",
-    "build": "react-scripts build",
-    "test": "react-scripts test --runInBand --detectOpenHandles --verbose",
-    "test:coverage": "react-scripts test --coverage --watchAll=false",
-    "test:coverage:json": "react-scripts test --coverage --coverageReporters=\"json-summary\" --watchAll=false --testFailureExitCode=0 --detectOpenHandles --runInBand --forceExit",
-    "eject": "react-scripts eject",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --runInBand --detectOpenHandles --verbose",
+    "test:coverage": "react-app-rewired test --coverage --watchAll=false",
+    "test:coverage:json": "react-app-rewired test --coverage --coverageReporters=\"json-summary\" --watchAll=false --testFailureExitCode=0 --detectOpenHandles --runInBand --forceExit",
+    "eject": "react-app eject",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js --ext .jsx",
     "lint:styles": "stylelint **/*.css --config .stylelintrc.json --ignore-disables --allow-empty-input"
   },
@@ -23,11 +23,14 @@
     "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "13.5.0",
     "axios": "^1.2.2",
+    "customize-cra": "^1.0.0",
     "react": "17.0.2",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "17.0.2",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.0",
     "serve": "13.0.2",
+    "styled-jsx": "^5.1.1",
     "web-vitals": "2.1.4"
   },
   "devDependencies": {
