--- a/front-end/package.json
+++ b/front-end/package.json
@@ -27,6 +27,7 @@
     "react": "17.0.2",
     "react-app-rewired": "^2.2.1",
     "react-dom": "17.0.2",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.0",
     "serve": "13.0.2",
